# KAN_volatility_trading

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: 00_check_setup.py  01_download_data.py  02_build_dataset.py  03_train_baselines.py  04_plot_baseline_results.py  05_train_mlp.py  06_compare_models.py  07_train_kan.py  08_tune_kan.py  09_backtest_volatility_strategy.py  10_tune_strategy.py  11_generate_report_tables.py
src/kan_volatility/: backtest.py  config.py  data.py  features.py  metrics.py  strategy.py  targets.py
src/kan_volatility/models/: baselines.py  kan_model.py  mlp.py
src/kan_volatility_trading.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
