[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kan-volatility-trading"
version = "0.1.0"
description = "KAN-based realized volatility forecasting and paper-traded risk strategy."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]